<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rp_simple_controller</name>
  <version>0.0.0</version>
  <description>A controller for a turtle bot moving on a square</description>
  <maintainer email="carpesmartinez.2187914@studenti.uniroma1.it">rvp-00</maintainer>
  <license><apache2 class="0"></apache2></license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Add the package dependencies down here. Remember, rclcpp, geometry_msgs and turtlesim -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <!-- <depend>$DEPENDENCY</depend>-->
  <!-- but not after this line -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
